# TaviHackathon

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  .gitignore  chat.py  create_db.py  doctor.py  pyproject.toml
backend/app/: agent.py  config.py  database.py  enums.py  main.py  models.py  prompts.py  schemas.py  tools.py
backend/app/personas/pool/: 01_ace_premium.md  02_joe_budget.md  03_precision_terse.md  04_neighborhood_handyman.md  05_old_school.md  06_fast_cheap.md  07_metro_professional.md  08_family_shop.md
backend/app/routers/: admin.py  discovery.py  intake.py  negotiations.py  places.py
backend/app/services/: intake.py  personas.py
backend/app/services/discovery/: bbb_client.py  cache.py  filters.py  geocoding.py  hours.py  orchestrator.py  places_client.py  scoring.py  trade_map.py
backend/app/services/negotiation/: coordinator.py  inbound.py  mailpit.py  messages.py  pitch.py  prompts.py  readiness.py  scheduler.py  simulator.py  tools.py
backend/tests/: test_bbb_client.py  test_coordinator_tools.py  test_hours.py  test_pitch_template.py  test_scheduler.py  test_scoring.py
docs/: Step 3.md  agent-system-prompt.md  vendor-simulator.md
docs/prompts/: README.md
docs/prompts/distribution-readme-and-prompts/: conversation.md
docs/prompts/kickoff-and-intake-build/: conversation.md
docs/prompts/subpart-3-vendor-auction-build/: conversation.jsonl  conversation.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/: Nav.tsx
(+5 files in other folders)
